@@ -84,6 +84,7 @@
         <informaltable>
             <tgroup cols="2">
                 <colspec colnum="1" colwidth="1.5in" />
+                <colspec colwidth="*"/>
 
                 <thead>
                     <row>
